Update README.md with instructions on how to run the JAR.